--- a/styles/style.css
+++ b/styles/style.css
@@ -1,37 +1,65 @@
-body {
+html {
+  box-sizing: border-box;
   background-color: #F9EFDB;
   font-family: monospace;
   text-align: center;
   color: #333333;
-  box-sizing: border-box;
+}
+
+* {
+  box-sizing: inherit;
 }
 
 .title {
   font-weight: bold;
 }
 
-.recipe-list {
+
+.recipe-list-card {
   background-color: #9DBC98;
-  border: 4px dotted #638889;
-  padding: 12px;
-  width: 500px;
+  border: 4px inset #F9EFDB;
+  width: 1000px;
+  padding: 24px;
   height: auto;
+  margin: 0 auto;
+}
+
+.recipe-list {
+  width: 900px;
   margin: 0px auto;
-
-}
-
-.ul-no-bullet {
-  border: 4px solid #638889;
-  width: auto;
-  padding: 8px;
-  margin: 0px 5px;
-  display: block;
+  border: 4px outset #9DBC98;
+  padding: 24px;
   list-style: none;
+  display: flex;
 }
 
-a {
-  color: #333333;
+.recipe-link {
+  /* display: inline-block; */
+  background-color: #638889;
+  border: 4px inset #9DBC98;
+  /* height: 250px; */
+  /* width: 200px; */
+  padding-top: 24px;
+  margin: 4px;
+}
+
+.recipe-link a {
+  color: #201E1F;
   font-size: larger;
+  padding: 12px;
+  /* width: 200px; */
+  /* height: 50px; */
+  margin: 12px;
+  /* border: 1px dotted red; */
+  display: inline-block;
+}
+
+.recipe-link img {
+  width: 150px;
+  height: auto;
+  padding: 2px auto;
+  margin: 12px auto;
+  display: block;
 }
 
 .ingredients {
